Prevent wrapping in code blocks
Use horizontal scrolling for long lines of code rather than wrapping.

Fix #467

--- a/layouts/partials/css/academic.css
+++ b/layouts/partials/css/academic.css
@@ -171,9 +171,13 @@ code {
 
 pre {
   margin: 0 0 1rem 0;
-  overflow: auto;
   background-color: rgb(248, 248, 248); /* Match default highlight theme. */
   border-color: rgb(248, 248, 248);
+}
+
+pre code {
+  white-space: pre; /* Override Bootstrap to preserve line breaks in code. */
+  overflow-x: auto;
 }
 
 hr {
